--- a/00-B1-Autoclaims/02-Exercise1-Part3and4.Rmd
+++ b/00-B1-Autoclaims/02-Exercise1-Part3and4.Rmd
@@ -9,18 +9,168 @@ output:
       countIncrementalSlides: false
 ---
 
+* Introduction to R for Actuarial Students
 
-* Prepare  a  contingency  table  identifying  the  proportion  of  insured  across  differentCLASS(es) for each gender. Test the null hypothesis “There is no relationship betweenthe  GENDER  and  the  CLASS  of  the  insured”  against  an  alternate  hypothesis  of existence of significant relation at 95% confidence level.
+* CS1B Curriculum
 
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
 
-* Perform an appropriate testand comment.
+* Question 1 - Data Analysis
+* Exam on basis of ***Base R*** ( I will mention ***tidyverse***)
 
 ---
 
 
-Part 4
-============================
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
 
-Use  an  appropriate  test  to  test  if  the  mean  claim  amount  paid  and  variance  of  claim amounts paid is uniform between males and females.
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
 
+### AutoClaims
+
+```{r}
+
+AutoClaims <- read.csv("data/AutoClaims.csv")
+```
+
+
+```{r}
+
+head(AutoClaims)
+```
+
+---
+### Exercise 3
+
+* Prepare  a  contingency  table  identifying  the  proportion  of  insured  across  differentCLASS(es) for each gender.
+
+* Test the null hypothesis “**There is no relationship between the  GENDER  and  the  CLASS  of  the  insured**”  against  an  alternate  hypothesis  of existence of significant relation at 95% confidence level.
+
+
+* Perform an appropriate test and comment.
+
+---
+
+#### Contingency Table for the distribution of Gender across rating classes
+
+```{r}
+
+State_Class_Freq <-table(AutoClaims$GENDER,AutoClaims$CLASS) 
+State_Class_Freq
+```
+
+```{r}
+
+addmargins(State_Class_Freq)
+```
+
+---
+
+#### Contingency Table in terms of proportion of Rating classes
+
+(overall proportion)
+```{r}
+
+State_Class_RowProp<-prop.table(State_Class_Freq)
+
+State_Class_RowProp 
+```
+
+```{r}
+
+addmargins(State_Class_RowProp)
+```
+
+---
+
+#### Contingency Table in terms of proportion of Rating classes for each gender
+
+(proportions inside gender)
+
+```{r}
+
+State_Class_RowProp<-prop.table(State_Class_Freq, margin=1)
+
+State_Class_RowProp 
+```
+
+```{r}
+
+addmargins(State_Class_RowProp)
+```
+
+
+---
+
+### Chi-Square test for independence of two variables 
+
+```{r}
+chisq.test(AutoClaims$GENDER,AutoClaims$CLASS) 
+```
+---
+
+#### Interpretation: 
+
+* Chi-Squared values is 13.704 with 3 degrees of freedom. 
+* P-Value  for the chi  square test is 0.0033 < 0.05. 
+* Hence the null hypothesis of independence between the gender and rating class is rejected at 95% confidence level. 
+
+Looking at the proportions in the table, it is evident that more than 55% of the females are 
+in rating class C6 whereas as only 46% of the males are in that rating class. 
+
+Similarly 34.6% 
+of the males are in C11 as against only 30% of females in that class.
+
+Same is the case with F6. Hence the difference in proportions
+
+---
+
+#### Exercise 4 
+
+
+Use  an  appropriate test to  test  if  the  mean  claim  amount  paid  and  variance  of  claim amounts paid is uniform between males and females.
+
+---
+
+
+### Testing for mean amount paid between Male and Female
+
+
+```{r}
+t.test(AutoClaims$PAID[AutoClaims$GENDER=="M"],AutoClaims$PAID[AutoClaims$GENDER=="F"]) 
+```
+
+---
+
+* P-value = 0.28 > 0.05 
+* Null hypothesis of “**Mean claim paid is same between males and 
+females**” cannot be rejected at 95% confidence level 
+
+---
+
+#### ***var.test()***
+
+Testing for variance of amount paid between Male and Female
+
+```{r}
+var.test(AutoClaims$PAID[AutoClaims$GENDER=="M"],AutoClaims$PAID[AutoClaims$GENDER=="F"]) 
+```
+---
+
+
+* P-value = 0.0013 < 0.05 
+*  Null hypothesis of “Variance of claim paid is same between males and females” is rejected at 95% confidence level.
+
+* Claims paid among females is more  volatile compared to that of males
+
+---
 ---
