--- a/00-I1-CS1B-FIA-September-2021/Question_4.Rmd
+++ b/00-I1-CS1B-FIA-September-2021/Question_4.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Statistics with R"
-subtitle: "Modelling Data with R"
-author: "Dragonfly Stats"
-date: "2016/12/12"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -10,6 +8,33 @@ output:
       highlightStyle: github
       countIncrementalSlides: false
 ---
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 1 - Data Analysis
+* Exam on basis of ***Base R*** ( I will mention ***tidyverse***)
+
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
 4 An actuarial modeller in a health insurance company is constructing a Generalised 
 Linear Model (GLM) to analyse claim numbers for its critical illness policies. For 
 every policy over the past year, the company has collected the number of reported 
@@ -32,6 +57,7 @@ The data given in the file named Claims_Experience.RData show the past
 year’s reported claims for this company’s critical illness policies. After loading the 
 data into R, using the command load("Claims_Experience.RData"), the 
 data frame data_claims with its variables listed above will be available. 
+
 The modeller wants to fit a GLM with the Claim_number as the response variable 
 and is deciding whether to fit the GLM using a Poisson or Normal distribution. 
 
@@ -39,7 +65,9 @@ and is deciding whether to fit the GLM using a Poisson or Normal distribution.
 (i) Fit a GLM, using a Normal distribution, that treats age as a numerical variable 
 and the remaining three covariates as factors, calling this model_g. Your 
 answer should include the estimated value, standard error and p-value of each 
-parameter in the model. [7] 
+parameter in the model. 
+---
+
 (ii) (a) Fit a GLM, using the Poisson distribution, that treats age as a 
 numerical variable and the remaining three covariates as factors, 
 calling this model_p. 
@@ -50,8 +78,9 @@ parts (i) and (ii)(a).
 (c) Comment on the dependence of the number of reported claims on 
 Pre_existing_health_condition based on your answers to 
 parts (ii)(a) and (ii)(b). 
- [7] 
-CS1B S2021–6 
+
+---
+
 The modeller has fitted the GLM using a Poisson distribution and now wants to 
 investigate which of the three factors should be selected in the model, by using a 
 method similar to the backward selection approach. The following models are 
@@ -62,7 +91,9 @@ model_p
 model_p4: removes Gender, Pre_exisiting_health_condition and 
 Region from model_p 
 (iii) Compare the values of the Akaike’s Information Criterion for the four models 
-model_p, model_p2, model_p3 and model_p4. [6] 
+model_p, model_p2, model_p3 and model_p4. 
+---
+
 (iv) (a) Comment on your answer to part (iii). 
 (b) Comment on the differences between the process in part (iii) and the 
 full backward selection method. 
@@ -70,6 +101,10 @@ full backward selection method.
 The modeller suggests refining the fitted GLM (model_p) by also including the 
 interactions between the variables: Age, Region and 
 Pre_existing_health_condition. 
+
+---
+
+
 (v) (a) Fit an appropriate model, to include the interactions between the 
 variables Age, Region and 
 Pre_existing_health_condition. 
