--- a/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/00-mtcarsDiagnosticPlots.tex
+++ b/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/00-mtcarsDiagnosticPlots.tex
@@ -21,12 +21,12 @@ There are six plots (selectable by \texttt{which}) are currently available:
 \newpage
 \begin{framed}
 	\begin{verbatim}
-	plot(lm(mpg~wt+cyl),which=c(1),pch=18,col="red")
-	plot(lm(mpg~wt+cyl),which=c(2),pch=18,col="red")
-	plot(lm(mpg~wt+cyl),which=c(3),pch=18,col="red")
-	plot(lm(mpg~wt+cyl),which=c(4),pch=18,col="red")
-	plot(lm(mpg~wt+cyl),which=c(5),pch=18,col="red")
-	plot(lm(mpg~wt+cyl),which=c(6),pch=18,col="red")
+	plot(lm(mpg~wt+cyl),which=c,pch=18,col="red")
+	plot(lm(mpg~wt+cyl),which=c,pch=18,col="red")
+	plot(lm(mpg~wt+cyl),which=c,pch=18,col="red")
+	plot(lm(mpg~wt+cyl),which=c,pch=18,col="red")
+	plot(lm(mpg~wt+cyl),which=c,pch=18,col="red")
+	plot(lm(mpg~wt+cyl),which=c,pch=18,col="red")
 	\end{verbatim}
 \end{framed}
 
