--- a/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/12-InfluentialPoints.tex
+++ b/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/12-InfluentialPoints.tex
@@ -10,9 +10,9 @@
 	
 	\subsection{Summary of Influence Statistics}
 	\subsection{rstudent}
-	The studentized residual RSTUDENT is estimated by $s(i)^2$ without the ith observation, not by $s^2$. For example,
+	The studentized residual RSTUDENT is estimated by $s(1. ^2$ without the ith observation, not by $s^2$. For example,
 	
-	\[\mbox{RSTUDENT} = \frac{r_i}{s_{(i)} \sqrt{(1 - h_i)}} \]
+	\[\mbox{RSTUDENT} = \frac{r_i}{s_{(1. } \sqrt{(1 - h_1. }} \]
 	Observations with RSTUDENT larger than 2 in absolute value may need some attention.
 	
 	
@@ -63,7 +63,7 @@ DFFITS is a statistical measured designed to a show how influential an observati
 The COVRATIO statistic measures the change in 
 the determinant of the covariance matrix of the estimates by deleting the ith observation:
 
-\[ COVRATIO = \frac{det ( s^2_{(i)} (X_{(i)}'X_{(i)})^{-1} ) )}{ det ( s^2 (X'X)^{-1} ) }  \]
+\[ COVRATIO = \frac{det ( s^2_{(1. } (X_{(1. }'X_{(1. })^{-1} ) )}{ det ( s^2 (X'X)^{-1} ) }  \]
 %Belsley, Kuh, and Welsch suggest that observations with
 
 Observations with
