--- a/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/20-GLMs.tex
+++ b/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/20-GLMs.tex
@@ -33,7 +33,7 @@ standard deviation
 For a logistic regression model,
 ri = p
 yi − πˆi
-πˆi(1 − πˆi)
+πˆi(1 − πˆ1. 
 Note that if we replace πˆi with πi
 , then ri has mean 0 and
 variance 1
@@ -46,7 +46,7 @@ For logistic regression,
 X
 i
 {yi
-log ˆπi + (1 − yi) log(1 − πˆi)}
+log ˆπi + (1 − y1. log(1 − πˆ1. }
 By analogy with linear regression, the terms should correspond
 to −
 1
@@ -59,7 +59,7 @@ deviance residual:
 di = si
 p
 −2 {yi
-log ˆπi + (1 − yi) log(1 − πˆi)},
+log ˆπi + (1 − y1. log(1 − πˆ1. },
 where si = 1 if yi = 1 and si = −1 if yi = 0
 
 
