--- a/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/27-RGLMResiduals.tex
+++ b/04_Ghana_R_Users/Ghana_R_Users/OLD_TEX/27-RGLMResiduals.tex
@@ -33,7 +33,7 @@ The Pearson residuals can be used to check the model fit at each observation for
 The standardized and studentized Pearson residuals are
 \[
 r_{Psi} = \frac{r_{Pi}}{\sqrt{\hat{ \phi} (1- h_{i})} } \]
-\[ r_{Pti} = \frac{r_{Pi}}{\sqrt{ \hat{ \phi}_{(i)}
+\[ r_{Pti} = \frac{r_{Pi}}{\sqrt{ \hat{ \phi}_{(1. }
  (1- h_{i})} } \]
 
 
@@ -49,7 +49,7 @@ The deviance residuals can be used to check the model fit at each observation fo
 The standardized and studentized deviance residuals are
 \[
 r_{Dsi} = \frac{r_{Di}}{\sqrt{\hat{ \phi} (1- h_{i})} }\]
-\[r_{Dti} = \frac{r_{Di}}{\sqrt{ \hat{ \phi}_{(i)}
+\[r_{Dti} = \frac{r_{Di}}{\sqrt{ \hat{ \phi}_{(1. }
  (1- h_{i})}}\]
  
 \newpage
