--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions3.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions3.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Statistics with R"
-subtitle: "Modelling Data with R"
-author: "Dragonfly Stats"
-date: "2016/12/12"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -11,21 +9,44 @@ output:
       countIncrementalSlides: false
 ---
 
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+* Probability Distributions
+
+* Question 3
+
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
 #### Exercise 
 
 Data is provided for ‘BMIClaims’ of 150 policyholders and corresponding claim count.
 (BMIClaims.csv)
----
 
-Another slide.
 
 ```{r}
-BMI <- read.csv("CS1B_BMIClaims.csv")
+BMI <- read.csv("BMIClaims.csv")
 
 head(BMI)
 ```
 
 ---
+
 
 ## Exercise 1
 
@@ -34,8 +55,6 @@ Obtain 95% confidence interval for the standard deviation of BMI (using ``qchisq
 ```{r}
 var(BMI$BMI)
 ```
-
-
 ```{r}
 
 sd(BMI$BMI)
@@ -45,16 +64,21 @@ sd(BMI$BMI)
 
 ---
 
+#### Exercise 2
 
-## Inspecting the Dataframe
+ii) Further test the standard deviation of BMI to be equal to 4 by obtaining p value. State
+your conclusion of the test. 
+
+
+### Inspecting the Dataframe
 
 ```{r}
-
 nrow(BMI)
-
 ```
 
 ---
+
+
 
 #### Variance Testing
 
@@ -66,17 +90,6 @@ var.test(BMI$BMI,BMI$BMI)
 
 ---
 
-#### Exercise 2
-
-ii) Further test the standard deviation of BMI to be equal to 4 by obtaining p value. State
-your conclusion of the test. (6)
-
-iii)
-iii)
-iv)
-
----
-
 
 If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
 interval for proportion of obese people and comment on the likelihood if more than
@@ -84,16 +97,16 @@ interval for proportion of obese people and comment on the likelihood if more th
 
 ---
 
-## Exercise 3
+#### Exercise 3
 
 Claim frequency can be calculated as claim count divided by number of policyholders.
 Test whether claim frequency is different between obese and others.
 
 ---
 
-## Exercise 4
+#### Exercise 4
 
-Q. 4)
+
 
 If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
 interval for proportion of obese people and comment on the likelihood if more than
@@ -106,25 +119,35 @@ Test whether claim frequency is different between obese and others.
 
 Solution 3:
 i)
-> BMI <- read.csv("BMIClaims.csv")
-> n <- length(BMI$BMI)
-> alpha <- 0.05
 
-...
+```{r}
+
+BMI <- read.csv("BMIClaims.csv")
+n <- length(BMI$BMI)
+alpha <- 0.05
+```
+
+
 
 ---
 
-> sqrt(c((n-1)*var(BMI$BMI)/qchisq(1-alpha/2,df=n-1),(n-1)*var(BMI$BMI)/qchisq(alpha/2
-,df=n-1)))
-[2]
-[1] 5.920028 7.434763
-[2]
-[6]
 
-> sigma <- 4
-> statistic <- (n-1)*var(BMI$BMI)/sigma^2
-> statistic
-[1] 404.5421
+
+```{r}
+sqrt(c((n-1)*var(BMI$BMI)/qchisq(1-alpha/2,df=n-1),(n-1)*var(BMI$BMI)/qchisq(alpha/2
+,df=n-1)))
+```
+
+
+
+```{r}
+
+sigma <- 4
+statistic <- (n-1)*var(BMI$BMI)/sigma^2
+statistic
+
+```
+
 > qchisq(alpha/2,n-1)
 [1] 117.098
 > qchisq(alpha/2,n-1,lower=FALSE)
@@ -139,9 +162,12 @@ i.e. the standard deviation of BMI is not equal to 4.
 
 ---
 
-iii)
-> x <- nrow(BMI[BMI$BMI>30,])
-> binom.test(x,n,conf.level = 0.99)
+### Exercise 3
+
+```{r}
+x <- nrow(BMI[BMI$BMI>30,])
+binom.test(x,n,conf.level = 0.99)
+```
 
 ---
 
@@ -176,9 +202,15 @@ TRUE
 1
 7
 3
-> y <- c(3,7)
-> m <- c(10,140)
-> poisson.test(y,m)
+
+---
+
+
+```{r}
+y <- c(3,7)
+m <- c(10,140)
+poisson.test(y,m)
+```
 
 ---
 
