--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions4.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions4.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Statistics with R"
-subtitle: "Modelling Data with R"
-author: "Dragonfly Stats"
-date: "2016/12/12"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -11,7 +9,30 @@ output:
       countIncrementalSlides: false
 ---
 
+* Introduction to R for Actuarial Students
 
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+* Probability Distributions
+
+* Question 3
+
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
 
 Q. 4)
 
@@ -27,8 +48,10 @@ week.
 week, adjusted to be between 0 and 1 (higher values correspond to more ILI-related search
 queries).
 
-Exercises
-===================================================
+---
+
+#### Exercises
+
 i)
 Plot a histogram of the dependent variable, ILI. Comment on the shape of the
 distribution. (3)
@@ -46,9 +69,8 @@ and the actual observed value for the week computed in question (vi)? (4)
 vi)
 vii)
 viii)
-[33]
-Page 3 of 3IAI
-CS1B–1120
+---
+
 CS1B_BMIClaims
 http://www.actuariesindia.org/downloads/Year_2020_November_Exam/CS1B_BMIClaims.csv
 CS1B_FluTrain
@@ -56,93 +78,80 @@ http://www.actuariesindia.org/downloads/Year_2020_November_Exam/CS1B_FluTrain.cs
 CS1B_MotorClaims
 http://www.actuariesindia.org/downloads/Year_2020_November_Exam/CS1B_MotorClaims.csv
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
+---
 
-[24 Marks]
-Page 5 of 8IAI
-Solution 4:
-CS1B-1120
-i)
-setwd("C:/Users/shrey/Downloads")
+### Exercise 1
+
+
+```{r}
 FluTrain <- read.csv("FluTrain.csv")
-> str(FluTrain)
-'data.frame': 417 obs. of 3 variables:
-$ Week
-: Factor w/ 417 levels "2004-01-04 - 2004-01-10",..: 1 2 3 4 5 6 7 8 9 10 ..
-.
-$ ILI
-: num 2.42 1.81 1.71 1.54 1.44 ...
-$ Queries: num 0.238 0.22 0.226 0.238 0.224 ...
+```
+
+```{r}
+str(FluTrain)
+```
+
 hist(FluTrain$ILI)
 The data is positively skewed. Most of the ILI values are small, with a relatively small number of much larger values.
 
-Exercise 2
-=========================================================================
-ii)
+
+---
+
+### Exercise 2
+
+```{r}
 plot(FluTrain$Queries,log(FluTrain$ILI))
+```
 There is a positive linear relationship between log(ILI) and Queries.
 i.e. more the number of the Google search queries, higher the number of ILI-related physician visits.
-[4]
 
 
-
-Exercise 3
-=========================================================================
-iii)
-FluTrend1 = lm(log(ILI) ~ Queries, data = FluTrain)
-> summary (FluTrend1)
-[3]
-[1]
-Call:
-lm(formula = log(ILI) ~ Queries, data = FluTrain)
-Residuals:
-Min
-1Q
-Median
--0.76003 -0.19696 -0.01657
-3Q
-0.18685
-Max
-1.06450
-Coefficients:
-Estimate Std. Error t value Pr(>|t|)
-(Intercept) -0.49934
-0.03041 -16.42
-<2e-16 ***
-Queries
-2.96129
-0.09312
-31.80
-<2e-16 ***
 ---
-Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-Residual standard error: 0.2995 on 415 degrees of freedom
-Multiple R-squared: 0.709,
-Adjusted R-squared: 0.7083
-F-statistic: 1011 on 1 and 415 DF, p-value: < 2.2e-16
+
+### Exercise 3
+
+```{r}
+FluTrend1 = lm(log(ILI) ~ Queries, data = FluTrain)
+summary (FluTrend1)
+```
 
 
-Exercise 4
-=========================================================================
-iv)
-ln y = -0.49934 +2.96129x [2]
-where x is the google search queries and y is the percentage of ILI related physician visits. [1]
+---
+
+### Exercise 4
+
+```{r}
+coef(FluTrend1)
+```
+
+$$ln y = -0.49934 +2.96129x $$
+
+where x is the google search queries and y is the percentage of ILI related physician visits. 
 
 
-Exercise 5
-=========================================================================
-v)
-From the R output, R-squared value is 0.709. [1]
+---
+
+### Exercise 5
+
+From the R output, R-squared value is 0.709. 
+
+```{r}
 correlation <- cor(FluTrain$Queries,log(FluTrain$ILI))
-> correlation
-[1] 0.8420333
-> correlation ^ 2
-[1] 0.7090201 [1]
+correlation
+
+```
+
+```{r}
+correlation ^ 2
+```
 Hence, R-squared = Correlation ^ 2
-[1]
-[2]
-[5]
-vi)
+
+
+---
+
+
+#### Exercise 6
+
 which.max(FluTrain$ILI)
 [1] 303
 > FluTrain$Week[303]
@@ -150,25 +159,29 @@ which.max(FluTrain$ILI)
 417 Levels: 2004-01-04 - 2004-01-10 2004-01-11 - 2004-01-17 ... 2011-12-25 - 2011-12-3
 1
 Week of 18 th October 2009 to 24 th October 2009 corresponds to the highest percentage of ILI-related physician visits.
-[4]
-vii)
+
+
+---
+
+
+#### Exercise 7
+
+```{r}
 PredTest1 = exp(predict(FluTrend1,newdata = FluTrain))
-> PredTest1[303]
-303
-11.72765
-[2]
-[2]
-[4]
-Page 7 of 8IAI
-CS1B-1120
+PredTest1[303]
+```
+
+---
+
+#### Exercise 8
+
 viii)
 FluTrain$ILI[303]
 [1] 7.618892
 (7.618892-11.72765)/7.618892
 [1] -0.5392855
-[2]
-[2]
-[4]
-[33 Marks]
-***********************
-Page 8 of 8
+
+---
+
+
+---
